# AxiSEMLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh  compile_transpose.sh  compute_strain_field.py  coupling.py  coupling_specfem.py  database.py  reciprocity.py  sem_funcs.py  sks_kernel.py  submit_prepare_field.sh  submit_transpose.sh  syn_seismogram.py  transpose_fields.py  utils.py
EXAMPLES/cube2sph/: README.md  create_interfaces.sh
axisem/SOLVER/: nc_routines.F90
bak/: database.py  transpose_fields.py
smooth_model/: ak135_smooth.py
src/: axisem.cpp  finite_elem_mapping.f90  hdf5file.cpp  hdf5file.hpp  nc_routines.F90  sem_derivatives.f90  transpose.cpp  transpose1.cpp
test/specfem3d_cart/: README.md  create_interfaces.sh
test/specfem_injection/: README.md  create_interfaces.sh
